// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataViewTableHead component should render correctly 1`] = `
<div>
  <table
    class="pf-v6-c-table pf-m-grid-md"
    data-ouia-component-id="OUIA-Generated-Table-1"
    data-ouia-component-type="PF6/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class="pf-v6-c-table__thead"
      data-ouia-component-id="HeaderExample-thead"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="HeaderExample-tr-head"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <th
          class="pf-v6-c-table__th pf-m-truncate"
          data-ouia-component-id="HeaderExample-th-0"
          scope="col"
          tabindex="-1"
        >
          Repositories
        </th>
        <th
          class="pf-v6-c-table__th pf-m-truncate"
          data-ouia-component-id="HeaderExample-th-1"
          scope="col"
          tabindex="-1"
        >
          Branches
        </th>
        <th
          class="pf-v6-c-table__th pf-m-truncate"
          data-ouia-component-id="HeaderExample-th-2"
          scope="col"
          tabindex="-1"
        >
          Pull requests
        </th>
        <th
          class="pf-v6-c-table__th pf-m-truncate"
          data-ouia-component-id="HeaderExample-th-3"
          scope="col"
          tabindex="-1"
        >
          Workspaces
        </th>
        <th
          class="pf-v6-c-table__th pf-m-truncate"
          data-ouia-component-id="HeaderExample-th-4"
          scope="col"
          tabindex="-1"
        >
          Last commit
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`DataViewTableHead component should render selection column when selection is provided 1`] = `
<div>
  <div
    class="pf-v6-l-stack"
    data-ouia-component-id="DataView-stack"
  >
    <div
      class="pf-v6-l-stack__item"
      data-ouia-component-id="DataView-stack-item-0"
    >
      <table
        class="pf-v6-c-table pf-m-grid-md"
        data-ouia-component-id="OUIA-Generated-Table-3"
        data-ouia-component-type="PF6/Table"
        data-ouia-safe="true"
        role="grid"
      >
        <thead
          class="pf-v6-c-table__thead"
          data-ouia-component-id="HeaderExample-thead"
        >
          <tr
            class="pf-v6-c-table__tr"
            data-ouia-component-id="HeaderExample-tr-head"
            data-ouia-component-type="PF6/TableRow"
            data-ouia-safe="true"
          >
            <th
              class="pf-v6-c-table__th"
              scope="col"
              tabindex="-1"
            >
              <span
                class="pf-v6-u-screen-reader"
              >
                Data selection table head cell
              </span>
            </th>
            <th
              class="pf-v6-c-table__th pf-m-truncate"
              data-ouia-component-id="HeaderExample-th-0"
              scope="col"
              tabindex="-1"
            >
              Repositories
            </th>
            <th
              class="pf-v6-c-table__th pf-m-truncate"
              data-ouia-component-id="HeaderExample-th-1"
              scope="col"
              tabindex="-1"
            >
              Branches
            </th>
            <th
              class="pf-v6-c-table__th pf-m-truncate"
              data-ouia-component-id="HeaderExample-th-2"
              scope="col"
              tabindex="-1"
            >
              Pull requests
            </th>
            <th
              class="pf-v6-c-table__th pf-m-truncate"
              data-ouia-component-id="HeaderExample-th-3"
              scope="col"
              tabindex="-1"
            >
              Workspaces
            </th>
            <th
              class="pf-v6-c-table__th pf-m-truncate"
              data-ouia-component-id="HeaderExample-th-4"
              scope="col"
              tabindex="-1"
            >
              Last commit
            </th>
          </tr>
        </thead>
      </table>
    </div>
  </div>
</div>
`;

exports[`DataViewTableHead component should render the tree table correctly when isTreeTable is true 1`] = `
<div>
  <div
    class="pf-v6-l-stack"
    data-ouia-component-id="DataView-stack"
  >
    <div
      class="pf-v6-l-stack__item"
      data-ouia-component-id="DataView-stack-item-0"
    >
      <table
        class="pf-v6-c-table pf-m-grid-md"
        data-ouia-component-id="OUIA-Generated-Table-2"
        data-ouia-component-type="PF6/Table"
        data-ouia-safe="true"
        role="grid"
      >
        <thead
          class="pf-v6-c-table__thead"
          data-ouia-component-id="HeaderExample-thead"
        >
          <tr
            class="pf-v6-c-table__tr"
            data-ouia-component-id="HeaderExample-tr-head"
            data-ouia-component-type="PF6/TableRow"
            data-ouia-safe="true"
          >
            <th
              class="pf-v6-c-table__th pf-m-truncate"
              data-ouia-component-id="HeaderExample-th-0"
              scope="col"
              tabindex="-1"
            >
              Repositories
            </th>
            <th
              class="pf-v6-c-table__th pf-m-truncate"
              data-ouia-component-id="HeaderExample-th-1"
              scope="col"
              tabindex="-1"
            >
              Branches
            </th>
            <th
              class="pf-v6-c-table__th pf-m-truncate"
              data-ouia-component-id="HeaderExample-th-2"
              scope="col"
              tabindex="-1"
            >
              Pull requests
            </th>
            <th
              class="pf-v6-c-table__th pf-m-truncate"
              data-ouia-component-id="HeaderExample-th-3"
              scope="col"
              tabindex="-1"
            >
              Workspaces
            </th>
            <th
              class="pf-v6-c-table__th pf-m-truncate"
              data-ouia-component-id="HeaderExample-th-4"
              scope="col"
              tabindex="-1"
            >
              Last commit
            </th>
          </tr>
        </thead>
      </table>
    </div>
  </div>
</div>
`;
